--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
 
     <!-- Specify hard-coded project properties here -->
     <properties>
-        <mardao.version>2.3.0</mardao.version>
+        <mardao.version>2.3.1-SNAPSHOT</mardao.version>
         <gae.version>1.7.5</gae.version>
         <gae.application.version>lab</gae.application.version>
-        <gae.application.id>blood-donor</gae.application.id>
+        <gae.application.id>blood-kh</gae.application.id>
         <netbeans.hint.deploy.server>Tomcat</netbeans.hint.deploy.server>
         <itest.include>**/*ITest.java</itest.include>
         <surefire.default.skip>true</surefire.default.skip>
