--- a/pom.xml
+++ b/pom.xml
@@ -1,30 +1,62 @@
- 
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.wadpam.blood</groupId>
-    <artifactId>blood-donor</artifactId>
+    <groupId>com.wadpam.donor</groupId>
+    <artifactId>blood-donors</artifactId>
     <version>1-SNAPSHOT</version>
     <packaging>war</packaging>
-    <name>Blood Donor webapp</name>
+    <name>Blood Donors Backend</name>
+    <url>https://blood-donors.appspot.com/</url>
+
+    <licenses>
+        <license>
+            <name>GNU Lesser General Public License</name>
+            <url>http://www.gnu.org/licenses/lgpl.html</url>
+            <distribution>repo</distribution>
+            <comments>A business-friendly OSS license</comments>
+        </license>
+    </licenses>
+    
+    <scm>
+        <url>https://github.com/sosandstrom/gaelic</url>
+        <connection>scm:git:git://github.com/sosandstrom/gaelic.git</connection>
+        <developerConnection>scm:git:git@github.com:sosandstrom/gaelic.git</developerConnection>
+    </scm>
+
+    <developers>
+        <developer>
+            <id>sosandstrom</id>
+            <email>s.o.sandstrom@gmail.com</email>
+            <url>http://www.linkedin.com/in/sosandstrom</url>
+            <organization>Wadpam AB</organization>
+            <organizationUrl>http://www.wadpam.com</organizationUrl>
+            <timezone>7</timezone>
+        </developer>
+    </developers>
 
     <!-- Specify hard-coded project properties here -->
     <properties>
-        <mardao.version>2.3.1-SNAPSHOT</mardao.version>
-        <gae.version>1.7.5</gae.version>
+        <mardao.version>2.3.1</mardao.version>
+        <gae.version>1.7.7</gae.version>
         <gae.application.version>lab</gae.application.version>
-        <gae.application.id>blood-kh</gae.application.id>
+        <gae.application.id>${project.artifactId}</gae.application.id>
         <netbeans.hint.deploy.server>Tomcat</netbeans.hint.deploy.server>
         <itest.include>**/*ITest.java</itest.include>
         <surefire.default.skip>true</surefire.default.skip>
         <downloadSources>true</downloadSources>
         <logging.level>ALL</logging.level>
-	<gaelic.version>1.0.1-SNAPSHOT</gaelic.version>
+	<gaelic.version>1.0.6-SNAPSHOT</gaelic.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>com.wadpam.gaelic</groupId>
             <artifactId>gaelic-oauth</artifactId>
+            <version>${gaelic.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.wadpam.gaelic</groupId>
+            <artifactId>gaelic-domain</artifactId>
             <version>${gaelic.version}</version>
         </dependency>
         <dependency>
@@ -56,7 +88,6 @@
             <artifactId>jackson-mapper-asl</artifactId>
             <version>1.9.2</version>
         </dependency>
-        
 
         <!-- These dependencies are here just for enabling logging -->
         <dependency>
@@ -88,7 +119,7 @@
                 <configuration>
                     <source>1.6</source>
                     <target>1.6</target>
-                    <encoding>${project.build.sourceEncoding}</encoding>
+                    <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
             
@@ -103,9 +134,7 @@
                             <goal>write-project-properties</goal>
                         </goals>
                         <configuration>
-                            <outputFile>
-                                ${project.build.outputDirectory}/application.properties
-                            </outputFile>
+                            <outputFile>${project.build.outputDirectory}/application.properties</outputFile>
                         </configuration>
                     </execution>
                 </executions>
@@ -157,7 +186,7 @@
                                 <exclude>**/*ITest.java</exclude>
                             </excludes>
                             <systemPropertyVariables>
-                                <catalina.home>${project.basedir}/target/test</catalina.home>
+                                <catalina.home>/home/os/workspace/gaelic/gaelic-archetype-starter/target/test</catalina.home>
                             </systemPropertyVariables>
                         </configuration>
                     </execution>
@@ -177,7 +206,7 @@
             <plugin>
                 <groupId>net.kindleit</groupId>
                 <artifactId>maven-gae-plugin</artifactId>
-                <version>0.9.6-B1</version>
+                <version>0.9.6</version>
                 <configuration>
                     <port>8080</port>
                     <monitor.port>8788</monitor.port>
@@ -185,7 +214,7 @@
                     <disableUpdateCheck>true</disableUpdateCheck>
                     <wait>false</wait>
                     <jvmFlags>
-                        <jvmFlag>-Ddatastore.default_high_rep_job_policy_unapplied_job_pct=20</jvmFlag>
+                        <jvmFlag>-Ddatastore.default_high_rep_job_policy_unapplied_job_pct=1</jvmFlag>
                     </jvmFlags>                
                     <scanIntervalSeconds>0</scanIntervalSeconds>
                 </configuration>
@@ -203,8 +232,6 @@
                         <version>1.6.1</version>
                     </dependency>
                 </dependencies>
-                <executions>
-                </executions>
             </plugin>
 
             <plugin>
@@ -260,7 +287,7 @@
                             </execution>
                         </executions>
                         <configuration>
-                            <basePackage>com.wadpam.blood</basePackage>
+                            <basePackage>com.wadpam.donor</basePackage>
                             <targetFolder>${project.basedir}/src/main/java</targetFolder>
                         </configuration>
                     </plugin>
@@ -323,7 +350,7 @@
             <id>test</id>
             <properties>
                 <gae.application.version>test</gae.application.version>
-                <logging.level>INFO</logging.level>
+                <logging.level>FINE</logging.level>
             </properties>
         </profile>
         <profile>
@@ -334,6 +361,5 @@
             </properties>
         </profile>
     </profiles>
-
 
 </project>
