--- a/src/main/webapp/WEB-INF/logging.properties
+++ b/src/main/webapp/WEB-INF/logging.properties
@@ -13,16 +13,10 @@
 .level = WARNING
 
 # Set logging level for our classes
-com.wadpam.level = ${logging.level}
+com.wadpam.donor.level = ${logging.level}
 
-# Set logging level for spring security
-org.springframework.web.servlet.level = ALL
+#set logging level for mardao
+net.sf.mardao.level = ${logging.level}
 
-# Set logging level for spring security
-org.springframework.security.level = ALL
-
-#set logging level for jgoogletracker
-com.dmurph.tracking.level = FINE
-
-#set logging level for maodao
-net.sf.mardao.level = ALL
+#set logging level for gaelic
+com.wadpam.gaelic.level = ${logging.level}
