--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
         <mardao.version>2.3.1</mardao.version>
         <gae.version>1.7.7</gae.version>
         <gae.application.version>lab</gae.application.version>
-        <gae.application.id>${project.artifactId}</gae.application.id>
+        <gae.application.id>blood-kh</gae.application.id>
         <netbeans.hint.deploy.server>Tomcat</netbeans.hint.deploy.server>
         <itest.include>**/*ITest.java</itest.include>
         <surefire.default.skip>true</surefire.default.skip>
